// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor blur renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
}

<div
  class="c0"
>
  <a
    class="c1"
    href="#"
  >
    <span
      class="c2"
      style="display: inline-flex; vertical-align: bottom;"
    >
      Test
    </span>
  </a>
</div>
`;

exports[`Anchor disabled renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  opacity: 0.3;
  cursor: default;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
}

<div>
  <div
    class="c0"
  >
    <a
      class="c1"
      disabled=""
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      />
    </a>
  </div>
</div>
`;

exports[`Anchor focus renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 > circle,
.c1 > ellipse,
.c1 > line,
.c1 > path,
.c1 > polygon,
.c1 > polyline,
.c1 > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1::-moz-focus-inner {
  border: 0;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
}

<div
  class="c0"
>
  <a
    class="c1"
    href="#"
  >
    <span
      class="c2"
      style="display: inline-flex; vertical-align: bottom;"
    >
      Test
    </span>
  </a>
</div>
`;

exports[`Anchor gap renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
}

<div>
  <div
    class="c0"
  >
    <a
      class="c1"
      href="#"
    >
      <span
        class="c2"
        direction="row"
        style="display: inline-flex; vertical-align: bottom;"
      >
        <svg
          color="#7D4CDB"
        />
        Theme Gap
      </span>
    </a>
    <a
      class="c1"
      href="#"
    >
      <span
        class="c2"
        direction="row"
        style="display: inline-flex; vertical-align: bottom;"
      >
        <svg
          color="#7D4CDB"
        />
        Small Gap
      </span>
    </a>
    <a
      class="c1"
      href="#"
    >
      <span
        class="c2"
        direction="row"
        style="display: inline-flex; vertical-align: bottom;"
      >
        <svg
          color="#7D4CDB"
        />
        Medium Gap
      </span>
    </a>
    <a
      class="c1"
      href="#"
    >
      <span
        class="c2"
        direction="row"
        style="display: inline-flex; vertical-align: bottom;"
      >
        <svg
          color="#7D4CDB"
        />
        Large Gap
      </span>
    </a>
    <a
      class="c1"
      href="#"
    >
      <span
        class="c2"
        direction="row"
        style="display: inline-flex; vertical-align: bottom;"
      >
        <svg
          color="#7D4CDB"
        />
        5px Gap
      </span>
    </a>
  </div>
</div>
`;

exports[`Anchor icon label renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
}

<div>
  <div
    class="c0"
  >
    <a
      class="c1"
    >
      <span
        class="c2"
        direction="row"
        style="display: inline-flex; vertical-align: bottom;"
      >
        <svg
          color="#7D4CDB"
        />
        Test
      </span>
    </a>
  </div>
</div>
`;

exports[`Anchor is clickable 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
}

<div
  class="c0"
>
  <a
    class="c1"
    href="#"
  >
    <span
      class="c2"
      style="display: inline-flex; vertical-align: bottom;"
    >
      Test
    </span>
  </a>
</div>
`;

exports[`Anchor renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
}

<div>
  <div
    class="c0"
  >
    <a
      class="c1"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      />
    </a>
  </div>
</div>
`;

exports[`Anchor renders a11yTitle and aria-label 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
}

<div>
  <div
    class="c0"
  >
    <a
      aria-label="test"
      class="c1"
      href="#"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      >
        Test
      </span>
    </a>
    <a
      aria-label="test-2"
      class="c1"
      href="#"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      >
        Test
      </span>
    </a>
  </div>
</div>
`;

exports[`Anchor renders tag 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
      href="#"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      >
        Test
      </span>
    </span>
  </div>
</div>
`;

exports[`Anchor renders with children 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
}

<div
  class="c0"
>
  <a
    class="c1"
    href="#"
  >
    <span
      class="c2"
      style="display: inline-flex; vertical-align: bottom;"
    >
      children
    </span>
  </a>
</div>
`;

exports[`Anchor reverse icon label renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
}

<div>
  <div
    class="c0"
  >
    <a
      class="c1"
    >
      <span
        class="c2"
        direction="row"
        style="display: inline-flex; vertical-align: bottom;"
      >
        Test
        <svg
          color="#7D4CDB"
        />
      </span>
    </a>
  </div>
</div>
`;

exports[`Anchor should have no accessibility violations 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
}

<div>
  <div
    class="c0"
  >
    <a
      class="c1"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      >
        Link
      </span>
    </a>
  </div>
</div>
`;

exports[`Anchor shows no error for component used in as prop 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
}

<div
  class="c0"
>
  <div
    class="c1 c2"
    href="#"
    tabindex="0"
  >
    <span
      class="c3"
      style="display: inline-flex; vertical-align: bottom;"
    />
  </div>
</div>
`;

exports[`Anchor size renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: 12px;
  line-height: 18px;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 {
  box-sizing: border-box;
  font-size: 14px;
  line-height: 20px;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 {
  box-sizing: border-box;
  font-size: 18px;
  line-height: 24px;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5 {
  box-sizing: border-box;
  font-size: 22px;
  line-height: 28px;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c5:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  box-sizing: border-box;
  font-size: 26px;
  line-height: 32px;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  box-sizing: border-box;
  font-size: 34px;
  line-height: 40px;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c7:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8 {
  box-sizing: border-box;
  font-size: 10px;
  line-height: normal;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c8:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
}

<div>
  <div
    class="c0"
  >
    <a
      class="c1"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      />
    </a>
    <a
      class="c3"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      />
    </a>
    <a
      class="c4"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      />
    </a>
    <a
      class="c5"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      />
    </a>
    <a
      class="c6"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      />
    </a>
    <a
      class="c7"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      />
    </a>
    <a
      class="c8"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      />
    </a>
  </div>
</div>
`;

exports[`Anchor warns about invalid icon render 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  padding: 12px;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
}

<div
  class="c0"
>
  <a
    class="c1"
    href="#"
  >
    <span
      class="c2"
      style="display: inline-flex; vertical-align: bottom;"
    >
      <svg
        color="#7D4CDB"
      />
    </span>
  </a>
</div>
`;

exports[`Anchor warns about invalid label render 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
}

<div
  class="c0"
>
  <a
    class="c1"
    href="#"
  >
    <span
      class="c2"
      style="display: inline-flex; vertical-align: bottom;"
    >
      Test
    </span>
  </a>
</div>
`;

exports[`Anchor weight renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: lighter;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c5:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: bolder;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c7:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: initial;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c8:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: revert;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c9:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c10 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c10:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
}

<div>
  <div
    class="c0"
  >
    <a
      class="c1"
      href="#"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      >
        Normal
      </span>
    </a>
    <a
      class="c3"
      href="#"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      >
        Bold
      </span>
    </a>
    <a
      class="c4"
      href="#"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      >
        Bold
      </span>
    </a>
    <a
      class="c5"
      href="#"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      >
        Lighter
      </span>
    </a>
    <a
      class="c6"
      href="#"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      >
        Bolder
      </span>
    </a>
    <a
      class="c7"
      href="#"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      >
        Inherit
      </span>
    </a>
    <a
      class="c8"
      href="#"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      >
        Initial
      </span>
    </a>
    <a
      class="c9"
      href="#"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      >
        Revert
      </span>
    </a>
    <a
      class="c10"
      href="#"
    >
      <span
        class="c2"
        style="display: inline-flex; vertical-align: bottom;"
      >
        Unset
      </span>
    </a>
  </div>
</div>
`;
